# nfcscript

./: .env.example  .gitignore  AGENTS.md  README.md  SKILL.md  pyproject.toml  run_bump.bat
.github/workflows/: publish-pypi.yml
examples/: demo_ntag21x.py
src/nfc/: __init__.py  assertions.py  bits.py  checksum.py  cli.py  delay.py  hex_util.py  nfc_cli.py  reader.py  trace.py
src/nfcscript/: __init__.py  __init__.pyi  assertions.py  bits.py  builtins.py  dsl.py  main.py  reader.py  reader.pyi  registry.py  types.py  types.pyi  wrapper.py
tests/: test_assertions.py  test_bits.py  test_checksum.py  test_cli.py  test_cli_collect.py  test_delay.py  test_hex_util.py  test_reader.py  test_trace.py
