[project]
name = "nfcscript"
version = "0.0.3"
description = "A plugin-based core engine for DSL-style NFC testing automation."
readme = "README.md"
requires-python = ">=3.14"
authors = [{name = "crthu"}]
dependencies = [
    "CarrotRFIDTester",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
nfcscript = "nfcscript.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest",
    "pytest-dependency",
]

[tool.bumpversion]
current_version = "0.0.3"
allow_dirty = true
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
