[project]
name = "nfcscript"
version = "0.0.4"
description = "A plugin-based core engine for DSL-style NFC testing automation."
readme = "README.md"
requires-python = ">=3.14"
authors = [{name = "crthu"}]
dependencies = [
    "nfctester",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
nfcscript = "nfc.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest",
    "pytest-dependency",
]

[tool.bumpversion]
current_version = "0.0.4"
commit = true
tag = true
allow_dirty = true
tag_name = "v{new_version}"
message = "chore(release): bump version {current_version} → {new_version}"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
